Se hizo una breve introducccion alos parametros y fuction Declaration

--- a/funcparametros.html
+++ b/funcparametros.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>TemplateStrings</title>
-
+    <title>Funciones con parametros</title>
 </head>
-        
-
 <body>
-    <h1>Introducción  / JS</h1>
     <div id="app"></div>
-    <script src="temp.js"></script>
+    <script src="param.js"></script>
 </body>
 </html>
+
+
+
